--- a/src/companyback_look.html
+++ b/src/companyback_look.html
@@ -16,6 +16,8 @@
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
   <!-- VUE -->
   <script src="js/vue.min.js"></script>
+  <!-- alert套件 -->
+  <script src="https://unpkg.com/vue-swal"></script>
 
   <title>策展後台-攤位預覽</title>
 </head>
@@ -38,20 +40,20 @@
         </h1>
       </div>
   <!-- 攤位圖&內容 -->
-      <div class="extend_body mt-30">
+      <div class="extend_body mt-30" v-for="look in looks">
         <section class="extend_look">
-          <article :class="['extend_booth' + looks.TYPE]">
-            <img :src="['img/extend/booth' + looks.TYPE + '.png']" alt="picture">
+          <article :class="['extend_booth' + look.TYPE]">
+            <img :src="['img/extend/booth' + look.TYPE + '.png']" alt="picture">
             <div class="extend_banner">
-              <img :src="looks.LOGO" alt="logo">
-              <h3 class="bg-color ml-5">{{looks.NAME}}</h3>
+              <img :src="look.LOGO" alt="logo">
+              <h3 class="bg-color ml-5">{{look.NAME}}</h3>
             </div>
-            <iframe class="video" type="text/html" :src="['https://www.youtube.com/embed/' + looks['VIDEO'].split('=')[1] + '?autoplay=0&mute=1']" frameborder="0" allowfullscreen></iframe>
+            <iframe class="video" type="text/html" :src="['https://www.youtube.com/embed/' + look['VIDEO'].split('=')[1] + '?autoplay=0&mute=1']" frameborder="0" allowfullscreen></iframe>
           </article>
           <a @click.prevent="" href="#" class="extend_chat_btn">
-              <div :class="['extend_robotch' + looks.ROBOT]">
-              <img class="extend_robotwave" :src="['img/extend/robotwave' + looks.ROBOT + '.gif']" alt="conact robot"/>
-              <img class="extend_robot" :src="['img/extend/robot' + looks.ROBOT + '.png']" alt="conact robot"/>
+              <div :class="['extend_robotch' + look.ROBOT]">
+              <img class="extend_robotwave" :src="['img/extend/robotwave' + look.ROBOT + '.gif']" alt="conact robot"/>
+              <img class="extend_robot" :src="['img/extend/robot' + look.ROBOT + '.png']" alt="conact robot"/>
               </div>
               <i class="fa-solid fa-comment-dots extend_chat"></i>
           </a>
@@ -62,7 +64,7 @@
           <h3 @click="little('tech')" class="pb-20 content_point" :class="{'content_pointed':little_page=='tech'}">技術展示</h3>
           <h3 @click="little('live')" class="pb-20 content_point" :class="{'content_pointed':little_page=='live'}">展覽影片</h3>
           <article class="content_inner content_about" :class="{'-hide':little_page !='about'}">
-            <h4 class="mall-10">{{looks.INTRODUCE}}</h4>
+            <h4 class="mall-10">{{look.INTRODUCE}}</h4>
           </article>
           <article v-if="techs.length>0" class="content_inner content_tech" :class="{'-hide':little_page !='tech'}">
             <div class="-margin0auto pt-30" v-for="item in techs">
@@ -84,7 +86,7 @@
     </section>
     <section class="cblook_btn wrapper -margin0auto">
       <a href="./companyback_info.html" class="btn_company_back back">回去修改</a>
-      <a class="btn_company_back check">確認上架</a>
+      <a @click.prevent="onboard" href="#" class="btn_company_back check">確認上架</a>
     </section>
   </main>
   <!-- footer -->
