--- a/src/extend.html
+++ b/src/extend.html
@@ -22,11 +22,13 @@
       })();
   </script>
   <!-- is.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script> -->
   <!-- SweetAlert -->
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <!-- VUE -->
-    <script src="js/vue.min.js"></script>
+  <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
+  <!-- VUE -->
+  <script src="js/vue.min.js"></script>
+  <!-- alert套件 -->
+  <script src="https://unpkg.com/vue-swal"></script>
   <title>聚策展-虛擬商展</title>
 </head>
 
