--- a/src/about.html
+++ b/src/about.html
@@ -45,28 +45,27 @@
   </header>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
   <main class="about_main" id="about_main">
-    <section class="about_banner">
-      <img src="img/about/about_banner.png">
+    <section class="about_banner" v-for="expo in expos">
+      <img src="img/about/about_banner.png" >
       <div class="about_slogan pd-10">
         <div class="about_sloganFirst">
-          <h2 class="about_subtitle">---------- 2022 最新科技展 ----------</h2>
+          <h2 class="about_subtitle">{{expo.NAME}}</h2>
           <div class="about_new">
             <h1>新智慧、新科技、新創意</h1>
-            <h2>04.01 - 06.30</h2>
+            <h2>{{expo.START_TIME}}~{{expo.END_TIME}}</h2>
           </div>
         </div>
         <div class="about_rwd_title">
-          2022 最新科技展
-          <h2 class="about_date">04.01 - 06.30</h2>
+          {{expo.NAME}}
+          <h2 class="about_date">{{expo.START_TIME}}~{{expo.END_TIME}}</h2>
         </div>
 
         <!-- <h2 class="about_date">04.01 - 06.30</h2> -->
       </div>
     </section>
-    <section class="wrapper about_brief wrapper_about" > <!--data-aos="fade-up" data-aos-duration="2000"-->
+    <section class="wrapper about_brief wrapper_about" v-for="expo in expos"> <!--data-aos="fade-up" data-aos-duration="2000"-->
       <div class="mb-10 about_title">會議簡介</div>
-      <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
-        新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
+      <h3>{{expo.INTRODUCE}}
       </h3>
     </section>
     <section class="about_agenda "> <!--data-aos="fade-up" data-aos-duration="2000"-->
@@ -86,18 +85,19 @@
     <section class="wrapper about_lecturer wrapper_about"> <!--data-aos="fade-up" data-aos-duration="2000"-->
       <div class="mb-10 about_title">講師介紹</div>
       <div class="about_speakers"  > <!--speakers只要有講師的-->
-        <div class="about_speaker mt-20" v-for="(speaker,index) in speakers">
+        <div class="about_speaker mt-5" v-for="(speaker,index) in speakers">
           <div class="about_speaker_intro" @click="turn_back(index)">
-            <img class="mt-35" :src="speaker.PHOTO">
+            <img class="mt-50" :src="speaker.PHOTO">
             <h3 class="mt-18">{{speaker.NAME}}</h3>
             <!-- <h4 class="mt-8">中華電信總經理</h4> -->
           </div>
           <div class="about_hoverText -hide" @click="turn_back(index)">
-            <h4>{{speaker.NAME}}<br>經歷
+            <h4>{{speaker.NAME}}<br>
               <ul>
-                <li>{{speaker.INTRODUCE}}</li>
+                <p v-for="txt in speaker.txts">{{txt}}</p><br>
+                <!-- {{speaker.INTRODUCE.replaceAll('-',`${<br>}`)}} -->
               </ul>
-            </h4>
+            </h4> 
           </div>
         </div>
       </div>
