--- a/src/companyback.html
+++ b/src/companyback.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <!-- 套件flatpickr -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <!-- css -->
   <link rel="stylesheet" href="./css/style.min.css" />
   <!-- font awesome -->
@@ -12,8 +14,7 @@
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
-  <!-- 套件flatpickr -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
   <script src="js/vue.min.js"></script>
   <title>聚策展-廠商後台-首頁</title>
 </head>
@@ -48,38 +49,39 @@
         <div class="form_under pt-58">
           <input type="submit" value="確認送出" class="companyback_submit" required @click.prevent="ajax">
           <div class="field">
-            <input type="text" id="email" required autocomplete="off" class="" v-model="LINK"/>
-            <label for="email" title="LINK" data-title="直播網址"></label>
+            <input type="text" id="link" required autocomplete="off" class="" v-model="LINK"/>
+            <label for="link" title="LINK" data-title="直播網址"></label>
           </div>
         </div>
       </form>
       <div class="company_title chatboard"><a class="title_skill">廠商留言板</a></div>
       <!-- 第二層聊天室 -->
-      <section>
+      <section id="company_board">
 
         <ul class="companyback_main_chatbox">
           <li class="one">
             <div class="companyback_search">
               <!-- icon -->
-              <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search"
-                autocomplete="">
+              <input class="companyback_searchinput mt-44" type="search" name="search" placeholder="Search" autocomplete="" v-model="searchword" @keyup="ajax">
             </div>
             <section class="companyback_chat1 mt-43">
               <h3>廠商</h3>
               <ol class="chat1_company pt-12">
-                <li class="variouscompany">
-                  <div>
+                <li class="variouscompany" v-for="(cn, ci) in cname">
+                  <div @click="c_chatbox(cn.NAME, cn.COMPANY_ID)">
                     <i class="fa-solid fa-address-card"></i>
                     <span>
-                      <h3>廠商</h3>
-                      <h5>Hi</h5>
+                      <h3>{{cn.NAME}}</h3>
+                      <h5>{{clastmsg(cn.NAME)}}...</h5>
                     </span>
-                    <span class="company_receive">
-                      <p>Today, 5:25pm</p>
+                    <span class="variouscompany_span">
+                      <i v-if="company_text[company_text.length-1].G_MSG !=null" class="fa-solid fa-check -main_color"></i>
+                      <i v-if="company_text[company_text.length-1].C_MSG !=null"  class="fa-solid fa-check-double"></i>
+                      <p>{{clasttime(cn.NAME)}}</p>
                     </span>
                   </div>
                 </li>
-                <li class="variouscompany">
+                <!-- <li class="variouscompany">
                   <div>
                     <i class="fa-solid fa-address-card"></i>
                     <span>
@@ -102,27 +104,28 @@
                       <p>Today, 5:25pm</p>
                     </span>
                   </div>
-                </li>
+                </li> -->
               </ol>
             </section>
-            <section class="companyback_chat1 sechtion_chat2 mt-43">
+            <section class="companyback_chat1 mt-43">
               <h3>來賓</h3>
               <ol class="chat1_company pt-12">
-                <li class="variouscompany">
-                  <div>
+                <li class="variouscompany"  v-for="(gn, gi) in gname">
+                  <div @click="g_chatbox(gn.NAME, gn.GUEST_ID)">
                     <i class="fa-solid fa-id-card-clip "></i>
                     <span>
-                      <h3>來賓</h3>
-                      <h5>Hi</h5>
+                      <h3>{{gn.NAME}}</h3>
+                      <h5>{{glastmsg(gn.NAME)}}...</h5>
                     </span>
                     <span class="variouscompany_span">
-                      <i class="fa-solid fa-check -main_color"></i>
-                      <p>Today, 5:25pm</p>
+                      <i v-if="guest_text[guest_text.length-1].G_MSG !=null" class="fa-solid fa-check -main_color"></i>
+                      <i v-if="guest_text[guest_text.length-1].C_MSG !=null"  class="fa-solid fa-check-double"></i>
+                      <p>{{glasttime(gn.NAME)}}</p>
                     </span>
                   </div>
 
                 </li>
-                <li class="variouscompany">
+                <!-- <li class="variouscompany">
                   <div>
                     <i class="fa-solid fa-id-card-clip"></i>
                     <span>
@@ -163,7 +166,7 @@
                     </span>
                   </div>
 
-                </li>
+                </li> -->
               </ol>
             </section>
           </li>
@@ -174,32 +177,21 @@
               <div class="chat_title ">
                 <i class="fa-solid fa-address-card main-color"></i>
                 <span class="pl-27">
-                  <h3>廠商名稱</h3>
-                  <h5>Online</h5>
+                  <h3>{{boxname}}</h3>
+                  <!-- <h5>Online</h5> -->
                 </span>
-                <i class="fa-solid fa-xmark" id="c_back_close"></i>
+                <i class="fa-solid fa-xmark" id="c_back_close" @click="offbox"></i>
 
 
               </div>
               <div class="companyback_chated mt-41">
-                <p class="chat_content chat_content_you  mt-43 mr-30">你今天過得好嗎?<span>Today, 2:01pm</span>
-                </p>
-                <p class="chat_content chat_content_you  mt-43 mr-30">我過得很好喔 <span>Today,
-                    2:01pm</span></p>
-                <p class="chat_content chat_content_me  mt-43 ml-30">對啊團專<span>Today, 2:01pm</span>
-                </p>
-                <p class="chat_content chat_content_me  mt-43 ml-30">哭啊大家的動作也太快了吧<span>Today,
-                    2:01pm</span>
-                </p>
-                <p class="chat_content chat_content_you  mt-43 mr-30">所以你要振作一點阿<span>Today, 2:01pm</span>
-                </p>
-                <p class="chat_content chat_content_me  mt-43 ml-30">哭啊大家的動作也太快了吧<span>Today,
-                    2:01pm</span>
+                <P v-if="mainchat<=0" class="text_center">目前無對話紀錄</P>
+                <p  v-for="talk in mainchat" class="chat_content mt-43 mr-30" :class="talk.C_MSG==null?'chat_content_me':'chat_content_you'">{{talk.G_MSG||talk.C_MSG}}<span>{{talktime(talk.MSGTIME)}}</span>
                 </p>
               </div>
               <div class="chat_input mt-35">
-                <input type="text" placeholder="請輸入訊息內容..." class="">
-                <button class="btn-short ml-5"><i class="fa-solid fa-paper-plane"></i></button>
+                <input  v-model.trim="chatword" @keyup.enter="subchat" type="text" placeholder="請輸入訊息內容..." class="pl-5">
+                <button  @click="subchat" class="btn-short ml-5"><i class="fa-solid fa-paper-plane"></i></button>
               </div>
             </article>
           </li>
@@ -222,12 +214,14 @@
 
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- flatpickr -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <!-- 先連結main再連結各自設的js -->
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
-  <script src="js/c_back.min.js"></script>
-  <!-- flatpickr -->
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+  <!-- <script src="js/c_back.min.js"></script> -->
+  <script src="js/companyback_board.min.js"></script>
+
   <script>
     flatpickr("input[type=datetime-local]", {
       // mode: "range",
@@ -261,11 +255,10 @@
 
 
   <style>
-    .flatpickr-calendar::before {
+      /* .flatpickr-calendar::before {
       display: none;
 
-    }
-
+    } */
     .flatpickr-day.flatpickr-disabled,
     .flatpickr-day.flatpickr-disabled:hover,
     .flatpickr-day.prevMonthDay,
@@ -276,28 +269,20 @@
       color: #3C3844;
       /* box-shadow: 0px 4px 4px rgba(87, 255, 245, 0.25); */
     }
-
-    .flatpickr-day {
+    /* .flatpickr-day {
       color: black;
+    } */
+    .flatpickr-day {
+        color: #57FFF5;  
     }
-
     div.flatpickr-months .flatpickr-month {
       color: white;
     }
-
-
-    .flatpickr-day {
-      color: #57FFF5;
-    }
-
-
-
     span.flatpickr-weekday {
       font-size: 16px;
       color: #F6FAFB;
       padding: 5px;
     }
-
     .flatpickr-current-month .flatpickr-monthDropdown-months .flatpickr-monthDropdown-month {
       background-color: #040F15;
     }
@@ -310,11 +295,6 @@
     .flatpickr-months .flatpickr-next-month {
       fill: white;
     }
-
-
-
-
-
     .flatpickr-day.selected,
     .flatpickr-day.startRange,
     .flatpickr-day.endRange,
@@ -336,8 +316,6 @@
       background-color: #F37F15;
       border: #F37F15;
     }
-
-
     .flatpickr-day.inRange,
     .flatpickr-day.prevMonthDay.inRange,
     .flatpickr-day.nextMonthDay.inRange,
@@ -351,11 +329,8 @@
     .flatpickr-day.prevMonthDay:focus,
     .flatpickr-day.nextMonthDay:focus {
       background-color: #F6FAFB;
-
       box-shadow: -5px 0 0 #F6FAFB, 5px 0 0 #F6FAFB;
     }
-
-
     .flatpickr-day.today {
       border-color: #57FFF5;
     }
