--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,9 @@
             emailjs.init("VmKwawpbImHtur7aa");
         })();
     </script>
-    <!-- is.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
-    <!-- SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- alert套件 -->
+    <script src="https://unpkg.com/vue-swal"></script>
+    
     <title>聚策展</title>
 </head>
 
