--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -13,7 +13,8 @@
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
   <script src="js/vue.min.js"></script>
-
+    <!-- alert套件 -->
+    <script src="https://unpkg.com/vue-swal"></script>
   <title>聚策展-廠商後台-廠商資訊管理</title>
 </head>
 
