feat: 新增vue.min.js

--- a/src/contect.html
+++ b/src/contect.html
@@ -14,8 +14,10 @@
     <link rel="icon" href="img/tianlam-logo-mainblack.svg">
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <!-- SweetAlert -->
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- VUE -->
+    <script src="js/vue.min.js"></script>
+    <!-- alert套件 -->
+    <script src="https://unpkg.com/vue-swal"></script>
     <!-- is.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
     <!-- aos -->
