--- a/src/about.html
+++ b/src/about.html
@@ -25,10 +25,11 @@
           emailjs.init("VmKwawpbImHtur7aa");
       })();
   </script>
-  <!-- is.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/is_js/0.9.0/is.min.js"></script>
+ 
     <!-- vue -->
   <script src="js/vue.min.js"></script>
+    <!-- alert套件 -->
+    <script src="https://unpkg.com/vue-swal"></script>
   
 
   <title>聚策展-展會介紹</title>
