feat:調整tech筆數上限為8/news標題的--線減少/tech btn hover設定效果

--- a/src/news.html
+++ b/src/news.html
@@ -42,8 +42,8 @@
     <main>
         <section class="news_banner">
             <img src="img/news/news_banner.jpg">
-            <div class="news_slogan pd-10">
-                <h2 class="news_subtitle"><span class="news_span">--------- </span>新聞資訊 <span class="news_span">---------</span></h2>
+            <div class="news_slogan pr-60">
+                <h1 class="news_subtitle"><span class="news_span">--- </span>新聞資訊 <span class="news_span"> ---</span></h1>
             </div>
         </section>
         
