feat:調整index標題的文字為【Tián lám 2022 智慧全球科技展】，並設定手機板的max-width來調整斷句位置

--- a/src/index.html
+++ b/src/index.html
@@ -87,10 +87,6 @@
                         <div data-depth="0.3" class="index_paraItems_right">
                             <img src="./img/index/right_side_monitor.png" class="index_right_monitor">
                             <img src="./img/index/barAll2.gif" class="index_right_bar1">
-                            <!-- <img src="./img/index/132.png" class="index_right_bar2">
-                            <img src="./img/index/213.png" class="index_right_bar3">
-                            <img src="./img/index/231.png" class="index_right_bar4">
-                            <img src="./img/index/312.png" class="index_right_bar5"> -->
                         </div>                                        
                     </div>
                 </div>
@@ -103,30 +99,11 @@
             <div class="index_right_side -hide">
                 <img src="./img/index/barAll2.gif" class="index_bar_img1">
             </div>
-            <!-- <div class="index_right_side -hide">
-                <img src="./img/index/132.png" class="index_bar_img2">
-            </div>
-            <div class="index_right_side -hide">
-                <img src="./img/index/213.png" class="index_bar_img3">
-            </div>
-            <div class="index_right_side -hide">
-                <img src="./img/index/231.png" class="index_bar_img4">
-            </div>
-            <div class="index_right_side -hide">
-                <img src="./img/index/312.png" class="index_bar_img5">
-            </div> -->
 
-            <!-- <div class="swiper-button-next index_mobile_btnNext"></div>
-            <div class="swiper-button-prev index_mobile_btnPrev"></div>
-
-            <div class="swiper-pagination index_mobile_pagination"></div> -->
-
-           
-
-
+            <!-- 標題文字 -->
             <div class="index_title">
-                <h1 class="main-color" data-spotlight="Tián lám 2022 智慧全球科技聚策展！">
-                    Tián lám 2022 智慧全球科技聚策展
+                <h1 class="main-color" data-spotlight="Tián lám 2022 智慧全球科技展！">
+                    Tián lám 2022 智慧全球科技展
                     <!-- Tián lám聚策展-2022智慧全球科技 -->
                 </h1>
             </div>
