feat:用slice將slogan切兩行，並增加scss頁面.about_slogan right位置

--- a/src/about.html
+++ b/src/about.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class="about_rwd_title">
-          {{expo.NAME}}
+          {{expo.NAME.slice(0,-9)}}<br>{{expo.NAME.slice(13,22)}}
           <h2 class="about_date">{{expo.START_TIME}}~{{expo.END_TIME}}</h2>
         </div>
 
