fix更替中英文字順序

--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -48,7 +48,7 @@
               <div class="field pt-45">
                 <h2>影片網址:</h2>
                 <input type="text" id="vedio_add" required autocomplete="off" v-model="datas.VIDEO" />
-                <label for="vedio_add" title="Video address" data-title="影片網址"></label>
+                <label for="vedio_add" title="影片網址" data-title="Video address"></label>
               </div>
             </li>
             <li>
@@ -62,7 +62,7 @@
           <div class="field introduce pt-60">
             <h2>廠商介紹:</h2>
             <textarea name="" class="fle" id="intr_company" rows="8" required autocomplete="off" size="300" v-model="datas.INTRODUCE"></textarea>
-            <label for="intr_company" title="Introduce" data-title="廠商介紹"></label>
+            <label for="intr_company" title="廠商介紹" data-title="Introduce"></label>
           </div>
 
           <ul class="robot">
