--- a/src/companyback.html
+++ b/src/companyback.html
@@ -59,7 +59,7 @@
           <input type="submit" value="確認送出" class="companyback_submit" required @click.prevent="insertsql">
           <div class="field">
             <input type="text" id="email" class="c_link"  required autocomplete="off" v-model="LINK" style="background: transparent;"/>
-            <label for="email" title="LINK FORM YOUTUBE" data-title="直播網址"></label>
+            <label for="email" title="直播網址" data-title="LINK FORM YOUTUBE"></label>
           </div>
         </div>
       </form>
