feat:修正後台首頁的登入登出判定

--- a/src/backstage/backstage_index.html
+++ b/src/backstage/backstage_index.html
@@ -28,7 +28,7 @@
         <a href="./index.html" class="logo"><img src="img/tianlam-logo-backstage.svg" alt="logo" class="img"></img></a>
         <h3 class="ml-45">Tián lám➪後台中心</h3>
         <ul class="flex-box-end">
-            <li><a href="index.html" class="backstage_logout">
+            <li><a href="#" class="backstage_logout">
                     <h4>帳號登出</h4><img src="img/backstage_logout.svg" alt="logout" class="ml-6">
                 </a></li>
         </ul>
@@ -58,13 +58,13 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="js/backstage_index.min.js"></script>
-  <script src="js/backstage_member1.min.js"></script>
+  <!-- <script src="js/backstage_member1.min.js"></script>
   <script src="js/backstage_info3.min.js"></script>
   <script src="js/backstage_expo2.min.js"></script>
   <script src="js/backstage_member2.min.js"></script>
   <script src="js/backstage_info4.min.js"></script>
   <script src="js/backstage_expo4.min.js"></script>
-  <script src="js/backstage_expo3_live_agenda.min.js"></script>
+  <script src="js/backstage_expo3_live_agenda.min.js"></script> -->
 </body>
 
 </html>
